// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Chip Chip 1`] = `
Array [
  .c0 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  background-color: #F3F3F3;
}

.c0.RcChip-focused,
.c0.focus-visible,
.c0[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c0.RcChip-focused:after,
.c0.focus-visible:after,
.c0[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c0:active {
  background-color: rgba(73,73,73,0.24);
}

.c0.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c0 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c0 .RcChip-avatar span {
  width: auto;
  height: auto;
}

@media (hover:hover) and (pointer:fine) {
  .c0:hover {
    background-color: rgba(73,73,73,0.12);
  }
}

@media (hover:hover) and (pointer:fine) {

}

<div
    className="MuiChip-root c0"
    data-test-automation-class="selected-item"
    data-test-automation-value="default Chip"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <span
      className="MuiChip-label"
    >
      default Chip
    </span>
  </div>,
  .c0 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  border: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  background-color: #FFFFFF;
}

.c0:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #E5E5E5;
  border-radius: 100vw;
  pointer-events: none;
}

.c0.RcChip-focused,
.c0.focus-visible,
.c0[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c0.RcChip-focused:after,
.c0.focus-visible:after,
.c0[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c0:active {
  background-color: rgba(73,73,73,0.24);
}

.c0.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c0 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c0 .RcChip-avatar span {
  width: auto;
  height: auto;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {
  .c0:hover {
    background-color: rgba(73,73,73,0.08);
  }
}

<div
    className="MuiChip-root c0 MuiChip-outlined"
    data-test-automation-class="selected-item"
    data-test-automation-value="outlined Chip"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex={0}
  >
    <span
      className="MuiChip-label"
    >
      outlined Chip
    </span>
  </div>,
]
`;

exports[`Storyshots 🚀 Cleanup Components/Chip Chip Examples(Default) 1`] = `
Array [
  .c0 {
  font-size: 2.125rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 40px;
  color: #121212;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<h4
    className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="display1"
  >
    default
  </h4>,
  .c4 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 20px;
}

.c2:active {
  color: #666666;
}

.c2.focus-visible,
.c2[data-focus-visible-added] {
  background-color: transparent;
}

.c2.focus-visible:active,
.c2[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c2.focus-visible:after,
.c2[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: -4px;
  right: -4px;
  bottom: -4px;
  left: -4px;
  box-shadow: 0 0 0 1px #066FAC;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

.c2.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c2.RcIconButton-disabled {
  color: #B9B9B9;
}

.c2.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c2.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c2.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c2.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c2.RcIconButton-contained.focus-visible,
.c2.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c2.RcIconButton-contained.focus-visible:before,
.c2.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c2.RcIconButton-contained:active {
  color: #fff;
}

.c2 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: default;
  font-size: 20px;
}

.c5:active {
  color: #666666;
}

.c5.focus-visible,
.c5[data-focus-visible-added] {
  background-color: transparent;
}

.c5.focus-visible:active,
.c5[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c5.focus-visible:after,
.c5[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: -4px;
  right: -4px;
  bottom: -4px;
  left: -4px;
  box-shadow: 0 0 0 1px #066FAC;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

.c5.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c5.RcIconButton-disabled {
  color: #B9B9B9;
}

.c5.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c5.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c5.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c5.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c5.RcIconButton-contained.focus-visible,
.c5.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c5.RcIconButton-contained.focus-visible:before,
.c5.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c5.RcIconButton-contained:active {
  color: #fff;
}

.c5 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  color: #BE3933;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 20px;
}

.c7:active {
  color: #BE3933;
}

.c7.focus-visible,
.c7[data-focus-visible-added] {
  background-color: transparent;
}

.c7.focus-visible:active,
.c7[data-focus-visible-added]:active {
  color: rgba(190,57,51,0.88);
}

.c7.focus-visible:after,
.c7[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: -4px;
  right: -4px;
  bottom: -4px;
  left: -4px;
  box-shadow: 0 0 0 1px #066FAC;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

.c7.RcIconButton-persistBg {
  background-color: rgba(190,57,51,0.12);
}

.c7.RcIconButton-disabled {
  color: #B9B9B9;
}

.c7.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c7.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c7.RcIconButton-contained {
  color: #fff;
  background-color: #BE3933;
}

.c7.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c7.RcIconButton-contained.focus-visible,
.c7.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c7.RcIconButton-contained.focus-visible:before,
.c7.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c7.RcIconButton-contained:active {
  color: #fff;
}

.c7 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c10 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  color: #FFFFFF;
  font-size: 0.75rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  width: 24px;
  height: 24px;
  background-color: #F3F3F3;
}

.c10 > img,
.c10 > canvas {
  width: 100%;
  height: 100%;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
}

.c1 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  background-color: #F3F3F3;
}

.c1.RcChip-focused,
.c1.focus-visible,
.c1[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c1.RcChip-focused:after,
.c1.focus-visible:after,
.c1[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c1:active {
  background-color: rgba(73,73,73,0.24);
}

.c1.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c1 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c1 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c6 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  background-color: #F3F3F3;
}

.c6.RcChip-focused,
.c6.focus-visible,
.c6[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c6.RcChip-focused:after,
.c6.focus-visible:after,
.c6[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c6:active {
  background-color: rgba(73,73,73,0.24);
}

.c6.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c6:not(.RcChip-disabled) {
  color: #BE3933;
  background-color: #FFF7F5;
}

.c6:not(.RcChip-disabled):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #BE3933;
  border-radius: 100vw;
  pointer-events: none;
}

.c6:not(.RcChip-disabled).RcChip-focused,
.c6:not(.RcChip-disabled).focus-visible,
.c6:not(.RcChip-disabled)[data-focus-visible-added] {
  background-color: rgba(190,57,51,0.16);
}

.c6:not(.RcChip-disabled).RcChip-focused:after,
.c6:not(.RcChip-disabled).focus-visible:after,
.c6:not(.RcChip-disabled)[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #BE3933;
  border-radius: 100vw;
  pointer-events: none;
}

.c6:not(.RcChip-disabled):active {
  background-color: rgba(190,57,51,0.24);
}

.c6 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c6 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c8 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  background-color: #F3F3F3;
}

.c8.RcChip-focused,
.c8.focus-visible,
.c8[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c8.RcChip-focused:after,
.c8.focus-visible:after,
.c8[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #46BE59;
  border-radius: 100vw;
  pointer-events: none;
}

.c8:active {
  background-color: rgba(73,73,73,0.24);
}

.c8.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c8 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c8 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c12 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  background-color: #F3F3F3;
}

.c12.RcChip-focused,
.c12.focus-visible,
.c12[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c12.RcChip-focused:after,
.c12.focus-visible:after,
.c12[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #F6AD16;
  border-radius: 100vw;
  pointer-events: none;
}

.c12:active {
  background-color: rgba(73,73,73,0.24);
}

.c12.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c12 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c12 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

.c11 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c13 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
}

.c14.highlight-term {
  color: #121212 !important;
  background-color: #FFDFB1 !important;
}

@media (hover:hover) and (pointer:fine) {
  .c2:hover {
    background-color: transparent;
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2.RcIconButton-contained:hover {
    color: #fff;
  }

  .c2.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5:hover {
    background-color: transparent;
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5.RcIconButton-contained:hover {
    color: #fff;
  }

  .c5.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7:hover {
    background-color: transparent;
    color: rgba(190,57,51,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7.RcIconButton-contained:hover {
    color: #fff;
  }

  .c7.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1:hover {
    background-color: rgba(73,73,73,0.12);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c6:hover {
    background-color: rgba(73,73,73,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c6:not(.RcChip-disabled):hover {
    background-color: rgba(190,57,51,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c8:hover {
    background-color: rgba(73,73,73,0.12);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c12:hover {
    background-color: rgba(73,73,73,0.12);
  }
}

<div
    className="MuiGrid-root MuiGrid-container"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Basic Chip
      </h5>
      <div
        className="MuiChip-root c1"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic Chip
        </span>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Delete Icon
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic default Chip"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic default Chip
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c2 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Disabled
      </h5>
      <div
        aria-disabled={true}
        className="MuiChip-root c1 Mui-disabled RcChip-disabled MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic default Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiChip-label"
        >
          Basic default Chip
        </span>
        <button
          aria-describedby={null}
          aria-disabled={true}
          aria-label={null}
          className="MuiButtonBase-root c5 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root RcIconButton-disabled Mui-disabled"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title={null}
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Error
      </h5>
      <div
        className="MuiChip-root c6 MuiChip-deletable"
        data-is-error={true}
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic default Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic default Chip
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c7 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Focused
      </h5>
      <div
        className="MuiChip-root c1 RcChip-focused"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic default Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic default Chip
        </span>
      </div>
      <div
        className="MuiChip-root c8 RcChip-focused"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic default Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic default Chip
        </span>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Avatar
      </h5>
      <div
        className="MuiChip-root c1"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic default Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <div
          className="c9 MuiChip-avatar RcChip-avatar"
          data-test-automation-class="avatar"
        >
          <div
            className="c10 RcAvatar-avatarContainer"
          >
            <img
              src="test-file-stub"
            />
          </div>
        </div>
        <span
          className="MuiChip-label"
        >
          Basic default Chip
        </span>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Avatar & Delete Icon
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic default Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="c9 MuiChip-avatar RcChip-avatar"
          data-test-automation-class="avatar"
        >
          <div
            className="c10 RcAvatar-avatarContainer"
          >
            <img
              src="test-file-stub"
            />
          </div>
        </div>
        <span
          className="MuiChip-label"
        >
          Basic default Chip
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c2 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Custom color
      </h5>
      <p
        className="MuiTypography-root c11 MuiTypography-gutterBottom"
        data-color="neutral.f04"
        data-variant="caption1"
      >
        (default only show color when keyboard focus)
      </p>
      <div
        className="MuiChip-root c12"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic Chip
        </span>
      </div>
      <br />
      <br />
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Truncate Content
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic default Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        style={
          Object {
            "maxWidth": 120,
          }
        }
        tabIndex={0}
        title="Basic default Chip"
      >
        <div
          className="c9 MuiChip-avatar RcChip-avatar"
          data-test-automation-class="avatar"
        >
          <div
            className="c10 RcAvatar-avatarContainer"
          >
            <img
              src="test-file-stub"
            />
          </div>
        </div>
        <span
          className="MuiChip-label"
        >
          Basic default Chip
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c2 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Truncate Content when overflow, resize to view result(with RcText)
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value={
          <Styled(Component)
            noWrap={true}
            titleWhenOverflow={true}
          >
            Basic default Chip
          </Styled(Component)>
        }
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        style={
          Object {
            "maxWidth": "30%",
          }
        }
        tabIndex={0}
      >
        <div
          className="c9 MuiChip-avatar RcChip-avatar"
          data-test-automation-class="avatar"
        >
          <div
            className="c10 RcAvatar-avatarContainer"
          >
            <img
              src="test-file-stub"
            />
          </div>
        </div>
        <span
          className="MuiChip-label"
        >
          <p
            className="MuiTypography-root c13 c14 MuiTypography-noWrap"
            data-color="initial"
            data-variant="body1"
            title="Basic default Chip"
          >
            Basic default Chip
          </p>
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c2 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
    </div>
  </div>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
]
`;

exports[`Storyshots 🚀 Cleanup Components/Chip Chip Examples(outlined) 1`] = `
Array [
  .c0 {
  font-size: 2.125rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 40px;
  color: #121212;
}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<h4
    className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="display1"
  >
    outlined
  </h4>,
  .c4 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 20px;
}

.c2:active {
  color: #666666;
}

.c2.focus-visible,
.c2[data-focus-visible-added] {
  background-color: transparent;
}

.c2.focus-visible:active,
.c2[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c2.focus-visible:after,
.c2[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: -4px;
  right: -4px;
  bottom: -4px;
  left: -4px;
  box-shadow: 0 0 0 1px #066FAC;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

.c2.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c2.RcIconButton-disabled {
  color: #B9B9B9;
}

.c2.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c2.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c2.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c2.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c2.RcIconButton-contained.focus-visible,
.c2.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c2.RcIconButton-contained.focus-visible:before,
.c2.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c2.RcIconButton-contained:active {
  color: #fff;
}

.c2 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: default;
  font-size: 20px;
}

.c5:active {
  color: #666666;
}

.c5.focus-visible,
.c5[data-focus-visible-added] {
  background-color: transparent;
}

.c5.focus-visible:active,
.c5[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c5.focus-visible:after,
.c5[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: -4px;
  right: -4px;
  bottom: -4px;
  left: -4px;
  box-shadow: 0 0 0 1px #066FAC;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

.c5.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c5.RcIconButton-disabled {
  color: #B9B9B9;
}

.c5.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c5.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c5.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c5.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c5.RcIconButton-contained.focus-visible,
.c5.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c5.RcIconButton-contained.focus-visible:before,
.c5.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c5.RcIconButton-contained:active {
  color: #fff;
}

.c5 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  color: #BE3933;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 20px;
}

.c7:active {
  color: #BE3933;
}

.c7.focus-visible,
.c7[data-focus-visible-added] {
  background-color: transparent;
}

.c7.focus-visible:active,
.c7[data-focus-visible-added]:active {
  color: rgba(190,57,51,0.88);
}

.c7.focus-visible:after,
.c7[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: -4px;
  right: -4px;
  bottom: -4px;
  left: -4px;
  box-shadow: 0 0 0 1px #066FAC;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

.c7.RcIconButton-persistBg {
  background-color: rgba(190,57,51,0.12);
}

.c7.RcIconButton-disabled {
  color: #B9B9B9;
}

.c7.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c7.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c7.RcIconButton-contained {
  color: #fff;
  background-color: #BE3933;
}

.c7.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c7.RcIconButton-contained.focus-visible,
.c7.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c7.RcIconButton-contained.focus-visible:before,
.c7.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c7.RcIconButton-contained:active {
  color: #fff;
}

.c7 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c10 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  color: #FFFFFF;
  font-size: 0.75rem;
  font-weight: 700;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  width: 24px;
  height: 24px;
  background-color: #F3F3F3;
}

.c10 > img,
.c10 > canvas {
  width: 100%;
  height: 100%;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
}

.c1 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  border: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  background-color: #FFFFFF;
}

.c1:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #E5E5E5;
  border-radius: 100vw;
  pointer-events: none;
}

.c1.RcChip-focused,
.c1.focus-visible,
.c1[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c1.RcChip-focused:after,
.c1.focus-visible:after,
.c1[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c1:active {
  background-color: rgba(73,73,73,0.24);
}

.c1.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c1 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c1 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c6 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  border: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  background-color: #FFFFFF;
}

.c6:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #E5E5E5;
  border-radius: 100vw;
  pointer-events: none;
}

.c6.RcChip-focused,
.c6.focus-visible,
.c6[data-focus-visible-added] {
  background-color: rgba(73,73,73,0.16);
}

.c6.RcChip-focused:after,
.c6.focus-visible:after,
.c6[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c6:active {
  background-color: rgba(73,73,73,0.24);
}

.c6.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c6:not(.RcChip-disabled) {
  color: #BE3933;
  background-color: #FFF7F5;
}

.c6:not(.RcChip-disabled):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #BE3933;
  border-radius: 100vw;
  pointer-events: none;
}

.c6:not(.RcChip-disabled).RcChip-focused,
.c6:not(.RcChip-disabled).focus-visible,
.c6:not(.RcChip-disabled)[data-focus-visible-added] {
  background-color: rgba(190,57,51,0.16);
}

.c6:not(.RcChip-disabled).RcChip-focused:after,
.c6:not(.RcChip-disabled).focus-visible:after,
.c6:not(.RcChip-disabled)[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #BE3933;
  border-radius: 100vw;
  pointer-events: none;
}

.c6:not(.RcChip-disabled):active {
  background-color: rgba(190,57,51,0.24);
}

.c6 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c6 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c8 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  border: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #46BE59;
  background-color: rgb(240,249,241);
}

.c8:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #46BE59;
  border-radius: 100vw;
  pointer-events: none;
}

.c8.RcChip-focused,
.c8.focus-visible,
.c8[data-focus-visible-added] {
  background-color: rgba(70,190,89,0.16);
}

.c8.RcChip-focused:after,
.c8.focus-visible:after,
.c8[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #46BE59;
  border-radius: 100vw;
  pointer-events: none;
}

.c8:active {
  background-color: rgba(70,190,89,0.24);
}

.c8.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c8 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c8 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c11 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  border: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #F6AD16;
  background-color: rgb(254,248,236);
}

.c11:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #F6AD16;
  border-radius: 100vw;
  pointer-events: none;
}

.c11.RcChip-focused,
.c11.focus-visible,
.c11[data-focus-visible-added] {
  background-color: rgba(246,173,22,0.16);
}

.c11.RcChip-focused:after,
.c11.focus-visible:after,
.c11[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #F6AD16;
  border-radius: 100vw;
  pointer-events: none;
}

.c11:active {
  background-color: rgba(246,173,22,0.24);
}

.c11.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c11 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c11 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c12 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  border: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
  background-color: #E6F2F8;
}

.c12:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c12.RcChip-focused,
.c12.focus-visible,
.c12[data-focus-visible-added] {
  background-color: rgba(6,111,172,0.16);
}

.c12.RcChip-focused:after,
.c12.focus-visible:after,
.c12[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c12:active {
  background-color: rgba(6,111,172,0.24);
}

.c12.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c12 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c12 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c14 {
  height: 28px;
  box-sizing: border-box;
  padding: 2px;
  position: relative;
  border-radius: 100vw;
  border: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #066FAC;
  background-color: rgb(235,243,248);
}

.c14:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c14.RcChip-focused,
.c14.focus-visible,
.c14[data-focus-visible-added] {
  background-color: rgba(6,111,172,0.16);
}

.c14.RcChip-focused:after,
.c14.focus-visible:after,
.c14[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: inset 0 0 0 1px #066FAC;
  border-radius: 100vw;
  pointer-events: none;
}

.c14:active {
  background-color: rgba(6,111,172,0.24);
}

.c14.RcChip-disabled {
  color: #B9B9B9;
  opacity: 1;
}

.c14 .RcChip-avatar {
  color: #FFFFFF;
  margin-left: 0px;
  margin-right: -4px;
}

.c14 .RcChip-avatar span {
  width: auto;
  height: auto;
}

.c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

.c13 {
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c15 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
}

.c16.highlight-term {
  color: #121212 !important;
  background-color: #FFDFB1 !important;
}

@media (hover:hover) and (pointer:fine) {
  .c2:hover {
    background-color: transparent;
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2.RcIconButton-contained:hover {
    color: #fff;
  }

  .c2.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5:hover {
    background-color: transparent;
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c5.RcIconButton-contained:hover {
    color: #fff;
  }

  .c5.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7:hover {
    background-color: transparent;
    color: rgba(190,57,51,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7.RcIconButton-contained:hover {
    color: #fff;
  }

  .c7.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c1:hover {
    background-color: rgba(73,73,73,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c6:hover {
    background-color: rgba(73,73,73,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c6:not(.RcChip-disabled):hover {
    background-color: rgba(190,57,51,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c8:hover {
    background-color: rgba(70,190,89,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c11:hover {
    background-color: rgba(246,173,22,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c12:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c14:hover {
    background-color: rgba(6,111,172,0.08);
  }
}

<div
    className="MuiGrid-root MuiGrid-container"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Basic Chip
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-outlined"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic Chip
        </span>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Delete Icon
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-outlined MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic outlined Chip"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic outlined Chip
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c2 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Disabled
      </h5>
      <div
        aria-disabled={true}
        className="MuiChip-root c1 MuiChip-outlined Mui-disabled RcChip-disabled MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic outlined Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={-1}
      >
        <span
          className="MuiChip-label"
        >
          Basic outlined Chip
        </span>
        <button
          aria-describedby={null}
          aria-disabled={true}
          aria-label={null}
          className="MuiButtonBase-root c5 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root RcIconButton-disabled Mui-disabled"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title={null}
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Error
      </h5>
      <div
        className="MuiChip-root c6 MuiChip-outlined MuiChip-deletable"
        data-is-error={true}
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic outlined Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic outlined Chip
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c7 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Focused
      </h5>
      <div
        className="MuiChip-root c1 RcChip-focused MuiChip-outlined"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic outlined Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic outlined Chip
        </span>
      </div>
      <div
        className="MuiChip-root c8 RcChip-focused MuiChip-outlined"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic outlined Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic outlined Chip
        </span>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Avatar
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-outlined"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic outlined Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <div
          className="c9 MuiChip-avatar RcChip-avatar"
          data-test-automation-class="avatar"
        >
          <div
            className="c10 RcAvatar-avatarContainer"
          >
            <img
              src="test-file-stub"
            />
          </div>
        </div>
        <span
          className="MuiChip-label"
        >
          Basic outlined Chip
        </span>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Avatar & Delete Icon
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-outlined MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic outlined Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="c9 MuiChip-avatar RcChip-avatar"
          data-test-automation-class="avatar"
        >
          <div
            className="c10 RcAvatar-avatarContainer"
          >
            <img
              src="test-file-stub"
            />
          </div>
        </div>
        <span
          className="MuiChip-label"
        >
          Basic outlined Chip
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c2 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Custom color
      </h5>
      <div
        className="MuiChip-root c11 MuiChip-outlined"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Basic Chip
        </span>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Custom color
      </h5>
      <div
        className="MuiChip-root c12 MuiChip-outlined"
        data-test-automation-class="selected-item"
        data-test-automation-value="Custom background color"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Custom background color
        </span>
      </div>
      <br />
      <br />
      <p
        className="MuiTypography-root c13 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f04"
        data-variant="caption1"
      >
        when only set color, that will use color to calculate default background color
        <br />
        lighten: lighten 0.92 main color
        <br />
        darken: darken 0.72 main color
      </p>
      <div
        className="MuiChip-root c14 MuiChip-outlined"
        data-test-automation-class="selected-item"
        data-test-automation-value="Only color"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
      >
        <span
          className="MuiChip-label"
        >
          Only color
        </span>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Truncate Content
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-outlined MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value="Basic outlined Chip"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        style={
          Object {
            "maxWidth": 120,
          }
        }
        tabIndex={0}
        title="Basic outlined Chip"
      >
        <div
          className="c9 MuiChip-avatar RcChip-avatar"
          data-test-automation-class="avatar"
        >
          <div
            className="c10 RcAvatar-avatarContainer"
          >
            <img
              src="test-file-stub"
            />
          </div>
        </div>
        <span
          className="MuiChip-label"
        >
          Basic outlined Chip
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c2 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
      <br />
      <br />
      <h5
        className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
        data-color="neutral.f06"
        data-variant="headline1"
      >
        Truncate Content when overflow, resize to view result(with RcText)
      </h5>
      <div
        className="MuiChip-root c1 MuiChip-outlined MuiChip-deletable"
        data-test-automation-class="selected-item"
        data-test-automation-value={
          <Styled(Component)
            noWrap={true}
            titleWhenOverflow={true}
          >
            Basic outlined Chip
          </Styled(Component)>
        }
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        style={
          Object {
            "maxWidth": "30%",
          }
        }
        tabIndex={0}
      >
        <div
          className="c9 MuiChip-avatar RcChip-avatar"
          data-test-automation-class="avatar"
        >
          <div
            className="c10 RcAvatar-avatarContainer"
          >
            <img
              src="test-file-stub"
            />
          </div>
        </div>
        <span
          className="MuiChip-label"
        >
          <p
            className="MuiTypography-root c15 c16 MuiTypography-noWrap"
            data-color="initial"
            data-variant="body1"
            title="Basic outlined Chip"
          >
            Basic outlined Chip
          </p>
        </span>
        <button
          aria-describedby={null}
          aria-label="Remove"
          className="MuiButtonBase-root c2 MuiChip-deleteIcon RcChip-deleteIcon RcIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="Remove"
          type="button"
        >
          <span
            className="c3 delete_circle icon"
          >
            <svg
              className="c4"
              viewBox="0 0 32 32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm-4.243 8.343a.999.999 0 0 0-1.497 1.32l.083.094 4.243 4.241-4.243 4.244a.999.999 0 0 0 1.32 1.497l.094-.083L16 17.412l4.243 4.244a.999.999 0 0 0 1.497-1.32l-.083-.094-4.243-4.244 4.243-4.241a.999.999 0 0 0-1.32-1.497l-.094.083L16 14.584l-4.243-4.241z"
              />
            </svg>
            
          </span>
        </button>
      </div>
    </div>
  </div>,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
  @media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (hover:hover) and (pointer:fine) {

}

<br />,
]
`;
